--- a/.github/workflows/auth_cicd.yml
+++ b/.github/workflows/auth_cicd.yml
@@ -34,6 +34,7 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.PORT }}
           script: |
             if [ -d "renthub" ]; then
